--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,7 +10,9 @@ html {
     padding: 0;
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    overflow: hidden !important;
+    overflow-x: hidden !important;
+    overflow-y: hidden !important;
 }
 
 body {
